--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://www.lutheranconfessions.org/
+baseURL: https://lutheran-confessions.netlify.app/
 languageCode: en-us
 title: The Book of Concord Online
 
