--- a/hugo.yaml
+++ b/hugo.yaml
@@ -6,6 +6,11 @@ module:
   imports:
     - path: github.com/imfing/hextra
 
+markup:
+  goldmark:
+    renderer:
+      unsafe: true
+
 menu:
   main:
     - name: Book of Concord
