trying to troubleshoot pageref issue

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://lutheran-confessions.netlify.app/
+baseURL: https://lutheran-confessions.netlify.app
 languageCode: en-us
 title: The Book of Concord Online
 
