--- a/hugo.yaml
+++ b/hugo.yaml
@@ -2,6 +2,10 @@ baseURL: https://lutheran-confessions.netlify.app
 languageCode: en-us
 title: The Book of Concord Online
 
+enableRobotsTXT: true
+enableGitInfo: true
+enableEmoji: false
+
 module:
   imports:
     - path: github.com/imfing/hextra
@@ -49,4 +53,15 @@ params:
       link: /
       width: 300
       height: 75
+
+  footer:
+    displayCopyright: true
+    displayPoweredBy: true
+
+  displayUpdatedDate: true
+  dateFormat: "January 2, 2006"
+
+  editURL:
+    enable: true
+    base: "https://github.com/remysheppard/lutheran-confessions"
 
