--- a/hugo.yaml
+++ b/hugo.yaml
@@ -54,6 +54,10 @@ params:
       width: 300
       height: 75
 
+  page:
+    # full (100%), wide (90rem), normal (1280px)
+    width: wide
+
   footer:
     displayCopyright: true
     displayPoweredBy: true
